nav-bar overflow fixed

--- a/styles/global.css
+++ b/styles/global.css
@@ -10,7 +10,8 @@
     --w-tablet: 1080px;
 }
 
-body{
+body {
+    width: 100vw;
     overflow-x: hidden;
 }
 
